// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portal with element should match snapshot 1`] = `
<div
  id="portal"
>
  <div>
    <p>
      Content
    </p>
  </div>
</div>
`;

exports[`Portal with element should match snapshot 2`] = `
<Portal
  element="portal"
>
  <Portal
    containerInfo={
      <div>
        <p>
          Content
        </p>
      </div>
    }
  >
    <p>
      Content
    </p>
  </Portal>
</Portal>
`;

exports[`Portal with element unmouted, should match snapshot 1`] = `
<div
  id="portal"
/>
`;

exports[`Portal with element unmouted, should match snapshot 2`] = `null`;

exports[`Portal without element should match snapshot 1`] = `null`;

exports[`Portal without element should match snapshot 2`] = `
<Portal>
  <Portal
    containerInfo={
      <div>
        <p>
          Content
        </p>
      </div>
    }
  >
    <p>
      Content
    </p>
  </Portal>
</Portal>
`;

exports[`Portal without element unmouted, should match snapshot 1`] = `null`;

exports[`Portal without element unmouted, should match snapshot 2`] = `null`;
